добавляет переменные и стили в body

--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
       content="Разработка, ведение и поддержка решений для вашего бизнеса"
     />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- навигация и контактные данные -->
     <header>
       <nav>
-        <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
+        <a
+          class="logo-head"
+          href="/index.html"
+          title="Возврат на главную страницу"
+          ><span class="logo-front">Web</span>Studio</a
+        >
         <ul>
           <li><a href="">Cтудия</a></li>
           <li>
@@ -123,13 +144,19 @@
     <!-- адрес и контакты -->
     <footer>
       <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
-      <ul>
-        <li>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
-        </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
