--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -3,20 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="бизнес, профессионалы, web, разработка" />
+    <meta
+      name="keywords"
+      content="бизнес, профессионалы, web, разработка, сайт, качество"
+    />
     <meta
       name="description"
       content="Разработка, ведение и поддержка решений для вашего бизнеса"
     />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <!-- навигация и контактные данные -->
     <header>
       <nav>
-        <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
+        <a
+          class="logo-head"
+          href="/index.html"
+          title="Возврат на главную страницу"
+          ><span class="logo-front">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="../index.html">Cтудия</a></li>
+          <li><a href="../index.html" target="blank">Cтудия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -26,93 +50,110 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- фильтр работ -->
     <main>
-      <div>
-        <form action="">
-          <p>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-          </p>
-        </form>
-      </div>
       <section>
-        <h1>Портфолио</h1>
+        <h1>фильтр работ</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <!-- портфолио -->
+        <h2>Портфолио</h2>
         <ul>
           <li>
-            <img
-              src="img/technoсrack.jpg"
-              width="370"
-              alt="веб-сайт технокряк"
-            />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/technoсrack.jpg"
+                width="370"
+                alt="веб-сайт технокряк"
+              />
+              <h3>Технокряк</h3>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/new-orlean-vs-golden-star.jpg"
-              width="370"
-              alt="Постер New Orlean vs Golden star "
-            />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/new-orlean-vs-golden-star.jpg"
+                width="370"
+                alt="Постер New Orlean vs Golden star "
+              />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/seafood-restaurant.jpg"
-              width="370"
-              alt="лого ресторана Seafood"
-            />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/seafood-restaurant.jpg"
+                width="370"
+                alt="лого ресторана Seafood"
+              />
+              <h3>Ресторан Seafood</h3>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img src="img/project-prime.jpg" width="370" alt="наушники" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <a href="http://google.com.ua/">
+              <img src="img/project-prime.jpg" width="370" alt="наушники" />
+              <h3>Проект Prime</h3>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/project-boxes.jpg"
-              width="370"
-              alt="две коробки разных цветов и размеров"
-            />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/project-boxes.jpg"
+                width="370"
+                alt="две коробки разных цветов и размеров"
+              />
+              <h3>Проект Boxes</h3>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/inspiration-has-ho-borders.jpg"
-              width="370"
-              alt="монитор компьютера"
-            />
-            <h3>Inspiration has no borders</h3>
-            <p>Веб-сайт</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/inspiration-has-ho-borders.jpg"
+                width="370"
+                alt="монитор компьютера"
+              />
+              <h3>Inspiration has no borders</h3>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/limited-edition.jpg"
-              width="370"
-              alt="разворот книги"
-            />
-            <h3>Издание limited Edition</h3>
-            <p>Дизайн</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/limited-edition.jpg"
+                width="370"
+                alt="разворот книги"
+              />
+              <h3>Издание limited Edition</h3>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="img/project-lab.jpg" width="370" alt="бирка" />
-            <h3>Проект Lab</h3>
-            <p>Маркетинг</p>
+            <a href="http://google.com.ua/">
+              <img src="img/project-lab.jpg" width="370" alt="бирка" />
+              <h3>Проект Lab</h3>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="img/growing-business.jpg"
-              width="370"
-              alt="человек работает на компьютере"
-            />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <a href="http://google.com.ua/">
+              <img
+                src="img/growing-business.jpg"
+                width="370"
+                alt="человек работает на компьютере"
+              />
+              <h3>Growing Business</h3>
+              <p>Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -120,13 +161,19 @@
     <!-- адрес и контакты -->
     <footer>
       <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
-      <ul>
-        <li>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
-        </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
