--- a/index.html
+++ b/index.html
@@ -1,162 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="бизнес, профессионалы, web, разработка" />
-    <meta
-      name="description"
-      content="Разработка, ведение и поддержка решений для вашего бизнеса"
-    />
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
-      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- навигация и контактные данные -->
-    <header>
-      <nav>
-        <a
-          class="logo-head"
-          href="/index.html"
-          title="Возврат на главную страницу"
-          ><span class="logo-front">Web</span>Studio</a
-        >
-        <ul>
-          <li><a href="">Cтудия</a></li>
-          <li>
-            <a href="portfolio/portfolio.html" target="blank"> Портфолио</a>
-          </li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="бизнес, профессионалы, web, разработка" />
+  <meta name="description" content="Разработка, ведение и поддержка решений для вашего бизнеса" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!-- навигация и контактные данные -->
+  <header class="header">
+    <nav class="navigation">
+      <a class="logo-head" href="/index.html" title="Возврат на главную страницу"><span
+          class="logo-left">Web</span>Studio</a>
+      <ul class="navigation-list">
+        <li class="nav-list-item"><a class="nav-list-link" href="">Cтудия</a></li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./portfolio/portfolio.html" target="blank"> Портфолио</a>
+        </li>
+        <li class="nav-list-item"><a class="nav-list-link" href="">Контакты</a></li>
       </ul>
-    </header>
-    <main>
-      <!-- заказ услуги -->
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <p><a href="">Заказать услугу</a></p>
-        </section>
-      </div>
-      <!-- описание деятельности -->
-      <section>
-        <h2>Наши достоинства, качества, умения</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пункуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+    </nav>
+    <ul class="address-header" >
+      <li class="header-mail-item"><a class="header-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="header-phone-item"><a class="header-phone-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <!-- заказ услуги -->
+    <div>
+      <section class="order-service"> 
+        <h1 class="order-service-head">Эффективные решения для вашего бизнеса</h1>
+        <button class="order-service-button" type="button">Заказать услугу</button>
       </section>
-      <!-- виды деятельности -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="img/img-1.jpg" width="370" alt="Программирование" />
-          </li>
-          <li><img src="img/img-2.jpg" width="370" alt="Разработка" /></li>
-          <li><img src="img/img-3.jpg" width="370" alt="Дизайн" /></li>
-        </ul>
-      </section>
-      <!-- информация о работниках -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="img/игорь-демьяненко.jpg"
-              width="270"
-              alt="игорь-демьяненко"
-            />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="img/ольга-репина.jpg" width="270" alt="ольга-репина" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="img/николай-тарасов.jpg"
-              width="270"
-              alt="николай-тарасов"
-            />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="img/михаил-ермаков.jpg"
-              width="270"
-              alt="михаил-ермаков"
-            />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- адрес и контакты -->
-    <footer>
-      <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+    </div>
+    <!-- описание преимуществ -->
+    <section class="advantage">
+      <h2>Наши достоинства, качества, умения</h2>
+      <ul class="advantage-list">
+        <li class="advantage-item">
+          <h3 class="advantage-header">Внимание к деталям</h3>
+          <p class="advantage-paragraph">
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li class="advantage-item">
+        <li>
+          <h3 class="advantage-header">Пункуальность</h3>
+          <p class="advantage-paragraph">
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantage-header">Планирование</h3>
+          <p class="advantage-paragraph">
+            Равным образом консультация с широким активом в значительной
+            степени обуславливает.
+          </p>
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantage-header">Современные технологии</h3>
+          <p class="advantage-paragraph">
+            Значимость этих проблем настолько очевидна, что реализация
+            плановых заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <!-- виды деятельности -->
+    <section class="work">
+      <h2 class="work-header">Чем мы занимаемся</h2>
+      <ul class="work-list">
+        <li>
+          <img src="img/img-1.jpg" width="370" alt="Десктопные приложения" />
+        </li>
+        <li><img src="img/img-2.jpg" width="370" alt="Мобильные приложения" /></li>
+        <li><img src="img/img-3.jpg" width="370" alt="Дизайн" /></li>
+      </ul>
+    </section>
+    <!-- информация о работниках -->
+    <section class="staff">
+      <h2 class="staf-header">Наша команда</h2>
+      <ul>
+        <li class="staff-list">
+          <img src="img/игорь-демьяненко.jpg" width="270" alt="игорь-демьяненко" />
+          <h3 class="staff-name">Игорь Демьяненко</h3>
+          <p class="staff-function">Product Designer</p>
+        </li>
+        <li>
+          <img src="img/ольга-репина.jpg" width="270" alt="ольга-репина" />
+          <h3 class="staff-name">Ольга Репина</h3>
+          <p class="staff-function">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="img/николай-тарасов.jpg" width="270" alt="николай-тарасов" />
+          <h3 class="staff-name">Николай Тарасов</h3>
+          <p class="staff-function">Marketing</p>
+        </li>
+        <li>
+          <img src="img/михаил-ермаков.jpg" width="270" alt="михаил-ермаков" />
+          <h3 class="staff-name">Михаил Ермаков</h3>
+          <p class="staff-function">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <!-- адрес и контакты -->
+  <footer class="footer">
+    <a class="logo-foot" href="/index.html" title="Возврат на главную страницу"><span
+          class="logo-left">Web</span>Studio</a>
+    <address class="address-footer">
+      <ul class="address-list">
+        <li class="physical-address-item">
+          <a class="physical-address-link" href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank">г. Киев, пр-т Леси Украинки, 26</a>
+        </li>
+        <li class="footer-mail-item">
+          <a class="footer-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="footer-phone-item"><a class="footer-phone-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
+</body>
+
 </html>
