--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,179 +1,147 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="бизнес, профессионалы, web, разработка, сайт, качество"
-    />
-    <meta
-      name="description"
-      content="Разработка, ведение и поддержка решений для вашего бизнеса"
-    />
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
-      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
-  <body>
-    <!-- навигация и контактные данные -->
-    <header>
-      <nav>
-        <a
-          class="logo-head"
-          href="/index.html"
-          title="Возврат на главную страницу"
-          ><span class="logo-front">Web</span>Studio</a
-        >
-        <ul>
-          <li><a href="../index.html" target="blank">Cтудия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="бизнес, профессионалы, web, разработка, сайт, качество" />
+  <meta name="description" content="Разработка, ведение и поддержка решений для вашего бизнеса" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
+
+<body>
+  <!-- навигация и контактные данные -->
+  <header class="header">
+    <nav class="navigation">
+      <a class="logo-head" href="/index.html" title="Возврат на главную страницу"><span
+          class="logo-left">Web</span>Studio</a>
+      <ul class="navigation-list">
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="">Cтудия</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./portfolio.html" target="blank">
+            Портфолио</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="">Контакты</a>
+        </li>
       </ul>
-    </header>
-    <!-- фильтр работ -->
-    <main>
-      <section>
-        <h1>фильтр работ</h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
-        </ul>
-        <!-- портфолио -->
-        <h2>Портфолио</h2>
-        <ul>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/technoсrack.jpg"
-                width="370"
-                alt="веб-сайт технокряк"
-              />
-              <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/new-orlean-vs-golden-star.jpg"
-                width="370"
-                alt="Постер New Orlean vs Golden star "
-              />
-              <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/seafood-restaurant.jpg"
-                width="370"
-                alt="лого ресторана Seafood"
-              />
-              <h3>Ресторан Seafood</h3>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img src="img/project-prime.jpg" width="370" alt="наушники" />
-              <h3>Проект Prime</h3>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/project-boxes.jpg"
-                width="370"
-                alt="две коробки разных цветов и размеров"
-              />
-              <h3>Проект Boxes</h3>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/inspiration-has-ho-borders.jpg"
-                width="370"
-                alt="монитор компьютера"
-              />
-              <h3>Inspiration has no borders</h3>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/limited-edition.jpg"
-                width="370"
-                alt="разворот книги"
-              />
-              <h3>Издание limited Edition</h3>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img src="img/project-lab.jpg" width="370" alt="бирка" />
-              <h3>Проект Lab</h3>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://google.com.ua/">
-              <img
-                src="img/growing-business.jpg"
-                width="370"
-                alt="человек работает на компьютере"
-              />
-              <h3>Growing Business</h3>
-              <p>Приложение</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- адрес и контакты -->
-    <footer>
-      <a href="/index.html" title="Возврат на главную страницу">WebStudio</a>
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+    </nav>
+    <ul class="address-header">
+      <li class="header-mail-item">
+        <a class="header-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li class="header-phone-item">
+        <a class="header-phone-link" href="tel:+380961111111">+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </header>
+  <!-- фильтр работ -->
+  <main>
+    <section class="filter">
+      <h1>фильтр примеров выполненных работ</h1>
+      <ul class="button-list">
+        <li class="button-item"><button class="button-action" type="button">Все</button></li>
+        <li class="button-item"><button class="button-action" type="button">Веб-сайты</button></li>
+        <li class="button-item"><button class="button-action" type="button">Приложения</button></li>
+        <li class="button-item"><button class="button-action" type="button">Дизайн</button></li>
+        <li class="button-item"><button class="button-action" type="button">Маркетинг</button></li>
+      </ul>
+      <!-- портфолио -->
+      <h2>Портфолио</h2>
+      <ul class="project-list">
+        <li class="project-view"><a class="project-link" href="http://google.com.ua/">
+            <img src="img/technoсrack.jpg" width="370" alt="веб-сайт технокряк" />
+            <h3 class="project-name">Технокряк</h3>
+            <p class="project-description">Веб-сайт</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/new-orlean-vs-golden-star.jpg" width="370" alt="Постер New Orlean vs Golden star " />
+            <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+            <p class="project-description">Дизайн</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/seafood-restaurant.jpg" width="370" alt="лого ресторана Seafood" />
+            <h3 class="project-name">Ресторан Seafood</h3>
+            <p class="project-description">Приложение</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/project-prime.jpg" width="370" alt="наушники" />
+            <h3 class="project-name">Проект Prime</h3>
+            <p class="project-description">Маркетинг</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/project-boxes.jpg" width="370" alt="две коробки разных цветов и размеров" />
+            <h3 class="project-name">Проект Boxes</h3>
+            <p class="project-description">Приложение</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/inspiration-has-ho-borders.jpg" width="370" alt="монитор компьютера" />
+            <h3 class="project-name">Inspiration has no borders</h3>
+            <p class="project-description">Веб-сайт</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/limited-edition.jpg" width="370" alt="разворот книги" />
+            <h3 class="project-name">Издание limited Edition</h3>
+            <p class="project-description">Дизайн</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/project-lab.jpg" width="370" alt="бирка" />
+            <h3 class="project-name">Проект Lab</h3>
+            <p class="project-description">Маркетинг</p>
+          </a>
+        </li>
+        <li class="project-view">
+          <a class="project-link" href="http://google.com.ua/">
+            <img src="img/growing-business.jpg" width="370" alt="человек работает на компьютере" />
+            <h3 class="project-name">Growing Business</h3>
+            <p class="project-description">Приложение</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <!-- адрес и контакты -->
+  <footer class="footer">
+    <a class="logo-foot" href="/index.html" title="Возврат на главную страницу"><span
+        class="logo-left">Web</span>Studio</a>
+    <address class="address-footer">
+      <ul class="address-list">
+        <li class="physical-address-item">
+          <a class="physical-address-link" href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank">г. Киев, пр-т
+            Леси
+            Украинки, 26</a>
+        </li>
+        <li class="footer-mail-item">
+          <a class="footer-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="footer-phone-item"><a class="footer-phone-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
+</body>
+
 </html>
