--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <li class="nav-list-item"><a class="nav-list-link" href="">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="address-header" >
-      <li class="header-mail-item"><a class="header-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <ul class="address-header">
+      <li class="header-mail-item"><a class="header-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
       <li class="header-phone-item"><a class="header-phone-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
@@ -40,7 +41,7 @@
   <main>
     <!-- заказ услуги -->
     <div>
-      <section class="order-service"> 
+      <section class="order-service">
         <h1 class="order-service-head">Эффективные решения для вашего бизнеса</h1>
         <button class="order-service-button" type="button">Заказать услугу</button>
       </section>
@@ -91,25 +92,25 @@
       </ul>
     </section>
     <!-- информация о работниках -->
-    <section class="staff">
-      <h2 class="staf-header">Наша команда</h2>
-      <ul>
-        <li class="staff-list">
+    <section class="team">
+      <h2 class="team-header">Наша команда</h2>
+      <ul class="team-list">
+        <li class="staff-card">
           <img src="img/игорь-демьяненко.jpg" width="270" alt="игорь-демьяненко" />
           <h3 class="staff-name">Игорь Демьяненко</h3>
           <p class="staff-function">Product Designer</p>
         </li>
-        <li>
+        <li class="staff-card">
           <img src="img/ольга-репина.jpg" width="270" alt="ольга-репина" />
           <h3 class="staff-name">Ольга Репина</h3>
           <p class="staff-function">Frontend Developer</p>
         </li>
-        <li>
+        <li class="staff-card">
           <img src="img/николай-тарасов.jpg" width="270" alt="николай-тарасов" />
           <h3 class="staff-name">Николай Тарасов</h3>
           <p class="staff-function">Marketing</p>
         </li>
-        <li>
+        <li class="staff-card">
           <img src="img/михаил-ермаков.jpg" width="270" alt="михаил-ермаков" />
           <h3 class="staff-name">Михаил Ермаков</h3>
           <p class="staff-function">UI Designer</p>
@@ -120,11 +121,12 @@
   <!-- адрес и контакты -->
   <footer class="footer">
     <a class="logo-foot" href="/index.html" title="Возврат на главную страницу"><span
-          class="logo-left">Web</span>Studio</a>
+        class="logo-left">Web</span>Studio</a>
     <address class="address-footer">
       <ul class="address-list">
         <li class="physical-address-item">
-          <a class="physical-address-link" href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank">г. Киев, пр-т Леси Украинки, 26</a>
+          <a class="physical-address-link" href="https://goo.gl/maps/q2Yc8nwyEdXRSMvCA" target="blank">г. Киев, пр-т
+            Леси Украинки, 26</a>
         </li>
         <li class="footer-mail-item">
           <a class="footer-mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
