исправляет порядок объявления

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <!-- навигация и контактные данные -->
   <header class="header">
     <nav class="navigation">
-      <a class="logo-head" href="/index.html" title="Возврат на главную страницу"><span
+      <a class="logo-head" href="./index.html" title="Возврат на главную страницу"><span
           class="logo-left">Web</span>Studio</a>
       <ul class="navigation-list">
-        <li class="nav-list-item"><a class="nav-list-link" href="">Cтудия</a></li>
+        <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Cтудия</a></li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./portfolio/portfolio.html" target="blank"> Портфолио</a>
+          <a class="nav-list-link" href="./portfolio.html" target="blank"> Портфолио</a>
         </li>
         <li class="nav-list-item"><a class="nav-list-link" href="">Контакты</a></li>
       </ul>
@@ -120,7 +120,7 @@
   </main>
   <!-- адрес и контакты -->
   <footer class="footer">
-    <a class="logo-foot" href="/index.html" title="Возврат на главную страницу"><span
+    <a class="logo-foot" href="./index.html" title="Возврат на главную страницу"><span
         class="logo-left">Web</span>Studio</a>
     <address class="address-footer">
       <ul class="address-list">
