--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="бизнес, профессионалы, web, разработка, сайт, качество" />
   <meta name="description" content="Разработка, ведение и поддержка решений для вашего бизнеса" />
-  <title>WebStudio</title>
+  <title>WebStudio-Portfolio</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap"
@@ -14,18 +14,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
     integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
   <!-- навигация и контактные данные -->
   <header class="header">
     <nav class="navigation">
-      <a class="logo-head" href="/index.html" title="Возврат на главную страницу"><span
+      <a class="logo-head" href="./index.html" title="Возврат на главную страницу"><span
           class="logo-left">Web</span>Studio</a>
       <ul class="navigation-list">
         <li class="nav-list-item">
-          <a class="nav-list-link" href="">Cтудия</a>
+          <a class="nav-list-link" href="./index.html" target="blank">Cтудия</a>
         </li>
         <li class="nav-list-item">
           <a class="nav-list-link" href="./portfolio.html" target="blank">
@@ -126,7 +126,7 @@
   </main>
   <!-- адрес и контакты -->
   <footer class="footer">
-    <a class="logo-foot" href="/index.html" title="Возврат на главную страницу"><span
+    <a class="logo-foot" href="./index.html" title="Возврат на главную страницу"><span
         class="logo-left">Web</span>Studio</a>
     <address class="address-footer">
       <ul class="address-list">
