финальные минорные правки

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
-        </li class="advantage-item">
-        <li>
+        </li>
+        <li class="advantage-item">
           <h3 class="advantage-header">Пункуальность</h3>
           <p class="advantage-paragraph">
             Задача организации, в особенности же рамки и место обучения кадров
